--- a/css/styles.css
+++ b/css/styles.css
@@ -59,18 +59,18 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 /* ====================== Navigation ====================== */
-nav {
+nav[role=navigation] {
     width: 100%;
     height: 80px;
     background-color: #252831;
     text-align: center;
 }
 
-nav h1 {
+nav[role=navigation] h1 {
     margin: auto;
 }
 
-nav h1 a {
+nav[role=navigation] h1 a {
     color: #fff;
     font-size: 8pt;
     font-weight: 200;
@@ -251,7 +251,7 @@ nav h1 a {
 }
 
 #restaurant-img {
-    width: 90%;
+    width: 100%;
 }
 
 #restaurant-address {
@@ -269,14 +269,13 @@ nav h1 a {
     padding: 2px 0;
     text-align: center;
     text-transform: uppercase;
-    width: 90%;
 }
 
 #restaurant-container {
     border-bottom: 1px solid #d9d9d9;
     border-top: 1px solid #fff;
     padding: 140px 40px 30px;
-    width: 50%;
+    width: calc(50% - 80px);
     order: 3;
 }
 
@@ -337,11 +336,11 @@ nav h1 a {
 /* ====================== Media Queries ==================== */
 
 @media screen and (min-width: 400px) {
-    nav {
+    nav[role=navigation] {
         line-height: 80px;
     }
 
-    nav h1 a {
+    nav[role=navigation] h1 a {
         font-size: 10pt !important;
     }
 
@@ -351,7 +350,7 @@ nav h1 a {
 }
 
 @media screen and (min-width: 500px) {
-    nav h1 a {
+    nav[role=navigation] h1 a {
         font-size: 14pt;
     }
 }
@@ -372,7 +371,7 @@ nav h1 a {
     }
     #restaurant-container {
         width: calc(100% - 30px);
-        padding: 490px 0 0 30px;
+        padding: 540px 0 0 30px;
     }
     #restaurant-img, #restaurant-cuisine, #restaurant-hours {
         width: calc(100% - 30px);
